Simplify to soft delete methods and update documentation